2006-03-16  Bruno Haible  <bruno@clisp.org>

	* msggrep.c (grep_task): Increment size.
	(long_options): Add --extracted-comment option.
	(main): Handle --extracted-comment option.
	(no_pass, usage): Update.
	(is_message_selected_no_invert): Implement matching on extracted
	comments.
	Suggested by Behdad Esfahbod <behdad@cs.toronto.edu>.

2006-03-16  Bruno Haible  <bruno@clisp.org>

	Handle GNOME glib context syntax.
	* xgettext.h (struct callshape): Add fields argnum1_glib_context,
	argnum2_glib_context.
	(struct partial_call): Add fields argnum1_glib_context,
	argnum2_glib_context.
	* xgettext.c (split_keywordspec): Recognize suffix 'g' and set the
	argnum1_glib_context, argnum2_glib_context fields.
	(insert_keyword_callshape, arglist_parser_alloc, arglist_parser_clone):
	Update.
	(arglist_parser_done): When suffix 'g' was specified, split off the
	context from the msgid and/or msgid_plural.
	* x-perl.c (extract_variable): Update.
	Suggested by Danilo Šegan <danilo@gnome.org>.

2006-03-16  Bruno Haible  <bruno@clisp.org>

	* xgettext.c (set_format_flags_from_context): Break long line.

2006-03-11  Bruno Haible  <bruno@clisp.org>

	* message.c (fuzzy_search_goal_function): Use 'volatile double'.

2006-03-11  Bruno Haible  <bruno@clisp.org>

	Speed up msgmerge with large compendia.
	* message.h (message_list_free): Add keep_messages argument.
	(message_list_list_free): Add keep_level argument.
	(fuzzy_search_goal_function): New declaration.
	(FUZZY_THRESHOLD): New macro.
	* message.c (message_list_free): Add keep_messages argument.
	(fuzzy_search_goal_function): New function, extracted from
	message_list_search_fuzzy_inner.
	(message_list_search_fuzzy_inner): Use it.
	(message_list_search_fuzzy): Use symbolic value FUZZY_THRESHOLD.
	(message_list_list_free): Comment in. Add keep_level argument.
	(message_list_list_search_fuzzy): Comment out. Use symbolic value
	FUZZY_THRESHOLD.
	(msgdomain_free): Update.