@@ -1,3 +1,7 @@
+2006-03-19  Bruno Haible  <bruno@clisp.org>
+
+	* xgettext.c (arglist_parser_done): Use error_at_line instead of error.
+
 2006-03-16  Bruno Haible  <bruno@clisp.org>
 
 	* msggrep.c (grep_task): Increment size.
